# um2nc-standalone

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyinstaller.spec  pyproject.toml  requirements.txt  ruff.toml
.conda/: conda_build_config.yaml  env_build.yml  env_dev.yml  meta.yaml
.github/workflows/: CD.yml  CI.yml  create_binary.yml  deploy_binary.yml  deploy_exe.yml  deploy_module.yml  release_dev_module.yml
.pyinstaller/: um2nc.spec
binary_dist/: pyinstaller.spec
binary_dist/jinja2_templates/: .modulefile.j2  .modulerc.j2  modulefile.j2
binary_dist/scripts/: build_and_deploy.sh  build_app.sh  build_module.sh  cleanup_old_dev_versions.sh  create_deployment_info_json.sh  create_hpc_target_deployment_info_json.sh  functions.sh  github_runner_env_export.sh  install_config.sh  render_jinja2_template.py  submit_pbs_job.sh
conda/: environment.yml  meta.yaml  meta.yml
integration/: INTEGRATION_README.md  binary_diff.sh  regression_tests.sh
src/: um2netcdf.py
src/um2nc/: __init__.py  _version.py  cli.py  common.py  conversion_driver_esm1p5.py  stashmasters.py  stashvar_cmip6.py  um2netcdf.py
src/um2nc/drivers/: common.py  conversion_driver_esm1p5.py  conversion_driver_esm1p6.py  esm1p5.py  esm1p6.py
test/: conftest.py  test_cli.py  test_common.py  test_conversion_driver_esm1p5.py  test_single_field.py  test_stashvar.py  test_um2netcdf.py
test/data/: zeroed_fieldsfile.tar.lama
test/drivers/: test_common.py  test_conversion_driver_esm1p5.py  test_driver_esm1pX.py  test_drivers_common.py  test_drivers_esm1p5.py  test_drivers_esm1p6.py  test_drivers_esm1pX.py  test_esm1p5.py  test_esm1p6.py  test_esm1p6_filenames.py
umpost/: __init__.py  _version.py  conversion_driver_esm1p5.py  stashmasters.py  stashvar_cmip6.py  um2netcdf.py
