[project]
name = "um2nc"
authors = [
  {name = "Ben Davies", email="ben.davies@anu.edu.au"},
  {name = "Davide Marchegiani", email="davide.marchegiani@anu.edu.au"},
  {name = "Martin Dix", email="martin.dix@anu.edu.au"},
  {name = "Spencer Wong", email="spencer.wong@anu.edu.au"},
]
maintainers = [
    { name = "ACCESS-NRI", email = "access.nri@anu.edu.au" }
]
description = "Program to convert Unified Model output files in fields file format to netCDF"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["netCDF", "UM", "postprocessing"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "cf-units",
    "cftime",
    "f90nml",
    "mo_pack",
    "mule",
    "netcdf4",
    "numpy <2",
    "scitools-iris",
]

[project.scripts]
esm1p5_convert_nc = "um2nc.conversion_driver_esm1p5:main"
um2nc = "um2nc.um2netcdf:main"

[project.urls]
Repository = "https://github.com/ACCESS-NRI/um2nc-standalone"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=80", 
    "setuptools-scm[simple]>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = "src"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"