[project]
name = "um2nc"
authors = [
  {name = "Ben Davies", email="ben.davies@anu.edu.au"},
  {name = "Davide Marchegiani", email="davide.marchegiani@anu.edu.au"},
  {name = "Martin Dix", email="martin.dix@anu.edu.au"},
  {name = "Spencer Wong", email="spencer.wong@anu.edu.au"},
]
maintainers = [
    { name = "ACCESS-NRI", email = "access.nri@anu.edu.au" }
]
description = "Program to convert Unified Model output files in fields file format to netCDF"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["netCDF", "UM", "postprocessing"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "cf-units",
    "cftime",
    "f90nml",
    "mo_pack",
    "mule",
    "netcdf4",
    "numpy <2",
    "scitools-iris",
    "versioneer",
]


[project.scripts]
esm1p5_convert_nc = "um2nc.drivers.conversion_driver_esm1p5:main"
um2nc = "um2nc.um2netcdf:main"

[project.urls]
Repository = "https://github.com/ACCESS-NRI/um2nc-standalone"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>64", 
    "versioneer[toml]"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/um2nc/_version.py"
versionfile_build = "um2nc/_version.py"
tag_prefix = ""
parentdir_prefix = "um2nc-"

[tool.pytest.ini_options]
pythonpath = "src"